--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
   <!DOCTYPE html>
-  <html lang="pt-BR>
+  <html lang="pt-BR">
     <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecos</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/script.js" defer></script>
     </head>
       <body>
         <header>
           <h1>Ecos</h1>
           <p class="subtitulo">Palavras que ecoam o tempo e a ancestralidade</p>
-          
+        </header>  
           <main>
             <section id="filtros">
               <!--Botões de categoria serão colocados aqui-->
@@ -20,11 +21,8 @@
               <!--Poemas carregados do Firebase-->
             </section>
           </main>
-
           <footer>
             <p>&copy; 2025 Obafemi Sankofa - Todos os direitos reservados.</p>
           </footer>
-        </header>
       </body>
-      <script type="module" src="js/script.js" defer></script>
     </html>
