--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
-  <!DOCTYPE html>
-  <html lang="pt-BR">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/script.js" defer></script>
-    </head>
-      <body>
-        <header>
-          <h1>Ecos</h1>
-          <p class="subtitulo">Palavras que ecoam o tempo e a ancestralidade</p>
-        </header>  
-          <main>
-            <section id="filtros">
-              <!--Botões de categoria serão colocados aqui-->
-            </section>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ecos</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script type="module" src="js/script.js" defer></script>
+</head>
+<body>
+  <header>
+    <h1>Ecos</h1>
+    <p class="subtitulo">Palavras que ecoam o tempo e a ancestralidade</p>
+  </header>  
+  <main>
+    <section id="filtros">
+      </section>
 
-            <section id="lista-poemas">
-              <!--Poemas carregados do Firebase-->
-            </section>
-          </main>
-          <footer>
-            <p>&copy; 2025 Obafemi Sankofa - Todos os direitos reservados.</p>
-          </footer>
-      </body>
-    </html>
+    <section id="lista-poemas">
+      <p id="loading-message">Carregando poemas...</p>
+      </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Obafemi Sankofa - Todos os direitos reservados.</p>
+  </footer>
+</body>
+</html>
