--- a/index.html
+++ b/index.html
@@ -13,12 +13,22 @@
     <p class="subtitulo">Palavras que ecoam o tempo e a ancestralidade</p>
   </header>  
   <main>
+    <section id="busca-container">
+      <form id="form-busca">
+        <input type="search" id="campo-busca" placeholder="Buscar por título...">
+        <button type="submit">Buscar</button>
+      </form>
+    </section>
+
     <section id="filtros">
       </section>
 
     <section id="lista-poemas">
       <p id="loading-message">Carregando poemas...</p>
-      </section>
+    </section>
+
+    <div id="paginacao-container">
+      </div>
   </main>
   <footer>
     <p>&copy; 2025 Obafemi Sankofa - Todos os direitos reservados.</p>
