--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ecos</title>
   <link rel="stylesheet" href="css/style.css">
-  <script type="module" src="js/script.js" defer></script>
 </head>
 <body>
   <header>
+    <div id="user-auth-status">
+        </div>
     <h1>Ecos</h1>
     <p class="subtitulo">Palavras que ecoam o tempo e a ancestralidade</p>
   </header>  
@@ -20,9 +21,6 @@
       </form>
     </section>
 
-    <section id="filtros">
-      </section>
-
     <section id="lista-poemas">
       <p id="loading-message">Carregando poemas...</p>
     </section>
@@ -33,5 +31,8 @@
   <footer>
     <p>&copy; 2025 Obafemi Sankofa - Todos os direitos reservados.</p>
   </footer>
+  <script type="module" src="js/firebase-config.js"></script>
+  <script type="module" src="js/auth-status.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 </html>
