--- a/login.html
+++ b/login.html
@@ -2,17 +2,17 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Admin Ecos</title>
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <title>Login - Ecos</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="js/login.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>ECOS - LOGIN</h1>
-    </header>
-    <main>
-        <div class="admin-container">
+    <div class="auth-container">
+        <div class="auth-card">
+            <a href="index.html" class="auth-title-link"><h1>ECOS</h1></a>
+            <p class="auth-subtitle">Entre para continuar</p>
+            
             <form id="form-login">
                 <label for="email">Email</label>
                 <input type="email" id="email" placeholder="seu-email@exemplo.com" required>
@@ -22,8 +22,15 @@
 
                 <button type="submit">Entrar</button>
             </form>
+
             <div id="feedback-message" class="feedback"></div>
+            
+            <div class="form-links">
+                <a href="redefinir-senha.html">Esqueceu a senha?</a>
+                <span>&bull;</span>
+                <a href="criar-usuario.html">Criar uma conta</a>
+            </div>
         </div>
-    </main>
+    </div>
 </body>
 </html>
