--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <section id="busca-container">
       <form id="form-busca">
-        <input type="search" id="campo-busca" placeholder="Buscar por título...">
-        <button type="submit">Buscar</button>
+        <input type="search" id="campo-busca" placeholder="Buscar por título..." aria-label="Buscar por título do poema">
+        <button type="submit" aria-label="Buscar">Buscar</button>
       </form>
     </section>
 
