--- a/poema.html
+++ b/poema.html
@@ -22,9 +22,9 @@
       <div id="lista-comentarios">
         </div>
       <form id="form-comentario">
-        <input type="text" id="nome" placeholder="Seu nome" required>
-        <textarea id="mensagem" placeholder="Escreva um comentário..." required></textarea>
-        <button type="submit">Enviar</button>
+        <input type="text" id="nome" placeholder="Seu nome" required aria-label="Seu nome">
+        <textarea id="mensagem" placeholder="Escreva um comentário..." required aria-label="Escreva um comentário"></textarea>
+        <button type="submit" aria-label="Enviar comentário">Enviar</button>
       </form>
     </section>
   </main>
