--- a/ecos/login.html
+++ b/ecos/login.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Ecos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/login.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="module" src="../js/login.js" defer></script>
 </head>
 <body>
     <div class="auth-container">
         <div class="auth-card">
-            <a href="index.html" class="auth-title-link"><h1>ECOS</h1></a>
+            <a href="../index.html" class="auth-title-link"><h1>ECOS</h1></a>
             <p class="auth-subtitle">Entre para continuar</p>
             
             <form id="form-login">
