--- a/ecos/criar-admin.html
+++ b/ecos/criar-admin.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Conta - Ecos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/criar-usuario.js" defer></script>
+    <title>Criar Conta de Administrador - Ecos</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="module" src="../js/criar-admin.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>ECOS - CRIE SUA CONTA</h1>
+        <h1>ECOS - REGISTRO DE ADMIN</h1>
     </header>
     <main>
         <div class="admin-container">
-            <form id="form-criar-usuario">
+            <form id="form-criar-admin">
                 <label for="email">Email</label>
                 <input type="email" id="email" required>
 
                 <label for="password">Senha</label>
                 <input type="password" id="password" required>
 
-                <button type="submit">Criar Conta</button>
+                <label for="admin-code">Código Secreto de Administrador</label>
+                <input type="password" id="admin-code" required>
+
+                <button type="submit">Criar Conta Admin</button>
             </form>
             <div id="feedback-message" class="feedback"></div>
         </div>
