--- a/ecos/redefinir-senha.html
+++ b/ecos/redefinir-senha.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redefinir Senha - Ecos</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/redefinir-senha.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="module" src="../js/redefinir-senha.js" defer></script>
 </head>
 <body>
     <div class="auth-container">
         <div class="auth-card">
-            <a href="index.html" class="auth-title-link"><h1>ECOS</h1></a>
+            <a href="../index.html" class="auth-title-link"><h1>ECOS</h1></a>
             <p class="auth-subtitle">Redefina sua senha</p>
             
             <form id="form-redefinir-senha">
