Commit de correções

--- a/ecos/redefinir-senha.html
+++ b/ecos/redefinir-senha.html
@@ -10,7 +10,7 @@
 <body>
     <div class="auth-container">
         <div class="auth-card">
-            <a href="../index.html" class="auth-title-link"><h1>ECOS</h1></a>
+            <a href="index.html" class="auth-title-link"><h1>ECOS</h1></a>
             <p class="auth-subtitle">Redefina sua senha</p>
             
             <form id="form-redefinir-senha">
