--- a/ecos/login.html
+++ b/ecos/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="auth-container">
         <div class="auth-card">
-            <a href="../index.html" class="auth-title-link"><h1>ECOS</h1></a>
+            <a href="index.html" class="auth-title-link"><h1>ECOS</h1></a>
             <p class="auth-subtitle">Entre para continuar</p>
             
             <form id="form-login">
