--- a/public/criar-usuario.html
+++ b/public/criar-usuario.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Conta - Ecos</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script type="module" src="../js/criar-usuario.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="criar-usuario.js" defer></script>
 </head>
 <body>
     <header>
