--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ecos</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -31,8 +31,8 @@
   <footer>
     <p>&copy; 2025 Obafemi Sankofa - Todos os direitos reservados.</p>
   </footer>
-  <script type="module" src="../js/firebase-config.js"></script>
-  <script type="module"src="../js/auth-status.js"></script>
-  <script type="module" src="../js/script.js"></script>
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module"src="auth-status.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
