--- a/public/login.html
+++ b/public/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Ecos</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script type="module" src="../js/login.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="login.js" defer></script>
 </head>
 <body>
     <div class="auth-container">
