--- a/public/criar-conta.html
+++ b/public/criar-conta.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Criar Conta - Ecos</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,14 +13,37 @@
       <h1>Ecos</h1>
       
       <form id="form-criar-conta">
-        <label for="email">Email</label>
-        <input type="email" id="email" required>
 
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" minlength="6" required>
+        <div class="form-group-row">
+          <div class="form-group">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" required>
+          </div>
+          <div class="form-group">
+            <label for="sobrenome">Sobrenome</label>
+            <input type="text" id="sobrenome" required>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="data-nascimento">Data de Nascimento</label>
+          <input type="date" id="data-nascimento" required>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" required>
+        </div>
+
+        <div class="form-group">
+          <label for="senha">Senha</label>
+          <input type="password" id="senha" minlength="6" required>
+        </div>
         
-        <label for="confirmar-senha">Confirmar Senha</label>
-        <input type="password" id="confirmar-senha" minlength="6" required>
+        <div class="form-group">
+          <label for="confirmar-senha">Confirmar Senha</label>
+          <input type="password" id="confirmar-senha" minlength="6" required>
+        </div>
 
         <button type="submit" id="btn-submit">Criar Conta</button>
       </form>
@@ -35,6 +58,5 @@
   </div>
 
   <script type="module" src="js/auth.js"></script>
-  <script type="module" src="js/firebase-config.js"></script>
 </body>
 </html>
