Fase 1 completa e melhorada

--- a/public/login.html
+++ b/public/login.html
@@ -31,6 +31,8 @@
         Entrar com Google
       </button>
       <div class="form-links">
+        <a href="resetar-senha.html">Esqueceu a senha?</a>
+        <span>|</span>
         <a href="criar-conta.html">Criar uma conta</a>
       </div>
     </div>
